# zbus

./: .commitlintrc.mjs  .mailmap  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  release-plz.toml
.github/workflows/: commitlint.yml  deploy.yml  rust.yml
book/: book.toml
zbus/: CHANGELOG.md  Cargo.toml
zbus/src/abstractions/: executor.rs  process.rs
zbus/src/address/: mod.rs
zbus/src/connection/: builder.rs
zbus/src/fdo/: dbus.rs  mod.rs  peer.rs
zbus/src/object_server/: mod.rs  node.rs
zbus/src/proxy/: mod.rs
zbus/tests/: basic.rs
zbus/tests/iface_and_proxy/: client.rs  iface.rs
zbus/tests/issue/: issue_279.rs
zbus_macros/: CHANGELOG.md  Cargo.toml
zbus_macros/src/: iface.rs  lib.rs  proxy.rs
zbus_macros/tests/: tests.rs
zbus_names/: CHANGELOG.md  Cargo.toml
zbus_names/src/: error_name.rs  interface_name.rs  member_name.rs  property_name.rs  unique_name.rs  utils.rs  well_known_name.rs
zbus_xml/: CHANGELOG.md  Cargo.toml
zbus_xml/src/: lib.rs
zbus_xmlgen/: CHANGELOG.md  Cargo.toml
zbus_xmlgen/src/: lib.rs  main.rs
zbus_xmlgen/tests/: gen.rs
zbus_xmlgen/tests/data/: struct_return.rs  struct_return.xml
zvariant/: CHANGELOG.md  Cargo.toml
zvariant/fuzz/: Cargo.toml
zvariant/src/: basic.rs  dict.rs  framing_offset_size.rs  into_value.rs  maybe.rs  object_path.rs  owned_value.rs  ser.rs  structure.rs
zvariant/src/gvariant/: de.rs  ser.rs
zvariant/tests/: array_value.rs  dict_value.rs
zvariant_derive/: CHANGELOG.md  Cargo.toml
zvariant_derive/src/: signature.rs  type.rs
zvariant_utils/: CHANGELOG.md
(+4 files in other folders)
