[package]
name = "zbus_xmlgen"
version = "5.2.0"
authors = [
    "Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>",
    "Federico Mena Quintero <federico@gnome.org>",
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Thomas Mühlbacher <tmuehlbacher@posteo.net>",
    "Tim Small <tim@seoss.co.uk>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "D-Bus XML interface code generator"
repository = "https://github.com/z-galaxy/zbus/"
documentation = "https://z-galaxy.github.io/zbus/"
keywords = ["D-Bus", "DBus", "IPC"]
license = "MIT"
categories = ["os::unix-apis", "development-tools"]
readme = "README.md"

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "zbus-xmlgen"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
zbus = { path = "../zbus", features = ["blocking-api"], version = "5.13.0" }
zbus_xml = { path = "../zbus_xml", version = "5.1.0" }

snakecase.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
